SUBDIRS =

if ENABLE_AUTOREBOOT
SUBDIRS += autoreboot
endif
if ENABLE_CORONA_INFO
SUBDIRS += corona-info
endif
if ENABLE_DROPBOX_UPLOADER
SUBDIRS += dropbox_uploader
endif
if ENABLE_EPGSCAN
SUBDIRS += EPGscan
endif
if ENABLE_IMGBACKUP
SUBDIRS += imgbackup
endif
if ENABLE_MOUNTPOINTMANAGEMENT
SUBDIRS += mountpointmanagement
endif
if ENABLE_PR_AUTO_TIMER
SUBDIRS += pr-auto-timer
endif
if ENABLE_SMARTHOMEINFO
SUBDIRS += smarthomeinfo
endif
if ENABLE_WORTRATEN
SUBDIRS += wortraten
endif

SUBDIRS += plugins-hide
