install-exec-local:
	install -d $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/epgfilter.cfg $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/epgfilter.lua $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/epgfilter.sri $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/epgfilter_hint.png $(DESTDIR)$(PLUGINDIR)

