install-exec-local:
	install -d $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/EPGscan.cfg $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/EPGscan.conf $(DESTDIR)$(PLUGINDIR)
	install -m 0755 $(srcdir)/EPGscan.sh $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/EPGscan_hint.png $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/EPGscan_setup.cfg $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/EPGscan_setup.lua $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/EPGscan_setup_hint.png $(DESTDIR)$(PLUGINDIR)

