install-exec-local:
	install -d $(DESTDIR)$(PLUGINDIR)
	install -d $(DESTDIR)$(WEBTVDIR)
	install -m 0644 $(srcdir)/LocalTV.cfg $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/LocalTV.lua $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/LocalTV_hint.png $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/LocalTVEpg.lua $(DESTDIR)$(WEBTVDIR)
