install-exec-local:
	install -d $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/favorites2bin.cfg $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/favorites2bin.lua $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/favorites2bin_hint.png $(DESTDIR)$(PLUGINDIR)
	install -m 0755 $(srcdir)/favorites2bin.sh $(DESTDIR)$(PLUGINDIR)
